--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
 <center>
-<font size="6"><a href="https://thematx7.github.io/4lo-nasza-polka/">Menu KSIĄŻEK</font></a>
+<font size="6"><a href="https://thematx7.github.io/4lo-nasza-ksiazka/">Menu KSIĄŻEK</font></a>
 <hr>
 <center>
 <header><center><font size="7"><i>"Za zamkniętymi drzwiami"</i></center></font>
