--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <font size="6"><a href="https://thematx7.github.io/4lo-nasza-ksiazka/">Menu KSIĄŻEK</font></a>
 <hr>
 <center>
-<header><center><font size="7"><i>"Za zamkniętymi drzwiami"</i></center></font>
+<header><center><font size="7"><i>"Za zamkniętymi drzwiami"</i><br>B.A. Paris</center></font>
 
 
 
