--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 <font size="6"><a href="https://thematx7.github.io/4lo-nasza-ksiazka/">Menu KSIĄŻEK</font></a>
 <hr>
 <center>
+<font size="6"><a href="https://thematx7.github.io/4lo-kryminal-sensacja-thriller/">Wróc do działu Kryminał, Sensacja, Thriller</font></a>
+<hr>
+<center>
 <header><center><font size="7"><i>"Za zamkniętymi drzwiami"</i><br>B.A. Paris</center></font>
 
 
@@ -65,7 +68,7 @@ Wyobraź sobie uroczystą kolację w ich idealnym domu,<br>
 <hr style=width:60%>
 <hr style=width:80%>
 <hr style=width:100%>
-<h4><center><font size="5">©Strona została wykonana przez <br><i> Aleksandre Oblak</i> (Informacje o książkach) oraz<br><i> Mateusza Stanikowskiego</i> (Strona internetowa)<br> 2a - 4Lo Lublin<h4></a></h4></span></h4></center>
+<h4><center><font size="5">©Strona została wykonana przez <br><i> Aleksandrę Oblak</i> (informacje o książkach) <br> oraz<i> Mateusza Stanikowskiego</i> (strona internetowa)<br> 2a - 4LO Lublin<h4></a></h4></span></h4></center>
 
 
 
